# dmce

./: .gitignore  Makefile  README.md
.githooks/: pre-commit
baselines/mmpf/: CMakeLists.txt  package.xml
baselines/rrt/: CMakeLists.txt  package.xml
dmce/: CMakeLists.txt  package.xml
dmce_core/: CMakeLists.txt  package.xml
dmce_core/include/dmce_core/: ClusteredFrontierPlanner.hpp  ExternalPlanner.hpp  FiniteLog.hpp  FrontierClustering.hpp  FrontierPlanner.hpp  OccupancyMap.hpp  Planner.hpp  RandomPlanner.hpp  RobotConnectivity.hpp  RobotMap.hpp  TypeDefs.hpp  utils.hpp
dmce_core/src/: ClusteredFrontierPlanner.cpp  ExternalPlanner.cpp  FrontierClustering.cpp  FrontierPlanner.cpp  OccupancyMap.cpp  RobotConnectivity.cpp  RobotMap.cpp  utils.cpp
dmce_mcplanner/: CMakeLists.txt  package.xml
dmce_mcplanner/include/dmce_mcplanner/: CachedMCAction.hpp  DMCTSPlanner.hpp  DisplacementAction.hpp  FrontierClusterAction.hpp  MCAction.hpp  MCActionGenerator.hpp  MCParams.hpp  MCRobotState.hpp  MCState.hpp  MCTSPlanner.hpp  MCTree.hpp  MCTreeNode.hpp
dmce_mcplanner/src/: DMCTSPlanner.cpp  DisplacementAction.cpp  FrontierClusterAction.cpp  MCAction.cpp  MCActionGenerator.cpp  MCTSPlanner.cpp  MCTree.cpp  MCTreeNode.cpp
dmce_msgs/: CMakeLists.txt  package.xml
dmce_msgs/action/: Pathfinding.action
dmce_msgs/msg/: RobotPlan.msg  RobotPosition.msg
dmce_msgs/srv/: GetPlan.srv
dmce_nodes/: CMakeLists.txt  package.xml
dmce_nodes/include/dmce_nodes/: ConnectivityServer.hpp  FrontierClusterServer.hpp  GlobalMapServer.hpp  GroundTruthMapServer.hpp  LoggingServer.hpp  NavigationServer.hpp  NodeServer.hpp  PathfindingServer.hpp  PlannerServer.hpp  RobotMapServer.hpp  RobotMarkerServer.hpp  SensorEmulatorServer.hpp  TransformServer.hpp
dmce_nodes/src/: ConnectivityServer.cpp  FrontierClusterServer.cpp  GlobalMapServer.cpp  GroundTruthMapServer.cpp  LoggingServer.cpp  NavigationServer.cpp  NodeServer.cpp  PathfindingServer.cpp  PlannerServer.cpp  RobotMapServer.cpp  RobotMarkerServer.cpp  SensorEmulatorServer.cpp  TransformServer.cpp  clock.cpp  nodeMain.cpp
dmce_sim/: CMakeLists.txt  package.xml
dmce_sim/config/: sim.yaml
dmce_sim/config/scenarios/: forest.yaml  open.yaml  tunnels.yaml  tunnels_45.yaml  tunnels_full.yaml  urban1.yaml  urban2.yaml  urban_full.yaml
dmce_sim/include/dmce_sim/: CollisionHandler.hpp  GroundTruthMap.hpp  LinearPathPlanner.hpp  Navigation.hpp  OmplAdapter.hpp  OmplPathPlanner.hpp  OmplPathfinding.hpp  PathPlanner.hpp  SensorEmulator.hpp
dmce_sim/launch/: demo.launch  groundStation.launch  robot.launch  robots.launch  sim.launch  viz.launch
dmce_sim/rviz/: demo.rviz
dmce_sim/src/: GroundTruthMap.cpp  Navigation.cpp  OmplAdapter.cpp  OmplPathPlanner.cpp  OmplPathfinding.cpp  PathPlanner.cpp  SensorEmulator.cpp
dmce_tests/: CMakeLists.txt  package.xml
dmce_tests/include/dmce_test/: common.hpp
dmce_tests/launch/: integration.test  node.test
dmce_tests/test/node/: TestGlobalMapServer.cpp  TestGroundTruthMapServer.cpp  TestNavigationServer.cpp  TestOmplPathfinding.cpp  TestPathfindingServer.cpp  TestPlannerServer.cpp  TestRobotMapServer.cpp  TestSensorEmulatorServer.cpp
dmce_tests/test/unit/: TestCollisionHandler.cpp  TestDisplacementAction.cpp  TestFiniteLog.cpp  TestFrontierClusterAction.cpp  TestFrontierClustering.cpp  TestGroundTruthMap.cpp  TestMCActionGenerator.cpp  TestMCTree.cpp  TestMCTreeNode.cpp  TestNavigation.cpp  TestOccupancyMap.cpp  TestPathPlanner.cpp  TestPlanner.cpp  TestRobotConnectivity.cpp  TestRobotMap.cpp  TestSensorEmulator.cpp  main.cpp
docker/: dmce.Dockerfile  entrypoint.sh  grid_map.Dockerfile  hello_pkg.Dockerfile  noetic_nvidia.Dockerfile
mre_dmcts/: CMakeLists.txt  package.xml
mre_dmcts_core/: CMakeLists.txt  package.xml
mre_dmcts_core/include/mre_dmcts_core/: ClusteredFrontierPlanner.hpp  ExternalPlanner.hpp  FiniteLog.hpp  FrontierClustering.hpp  FrontierPlanner.hpp  OccupancyMap.hpp  Planner.hpp  RandomPlanner.hpp  RobotConnectivity.hpp  RobotMap.hpp  TypeDefs.hpp  utils.hpp
mre_dmcts_core/src/: ClusteredFrontierPlanner.cpp  ExternalPlanner.cpp  FrontierClustering.cpp  FrontierPlanner.cpp  OccupancyMap.cpp  RobotConnectivity.cpp  RobotMap.cpp  utils.cpp
mre_dmcts_mcplanner/: CMakeLists.txt  package.xml
mre_dmcts_mcplanner/src/: DMCTSPlanner.cpp  DisplacementAction.cpp  FrontierClusterAction.cpp  MCAction.cpp  MCActionGenerator.cpp  MCTSPlanner.cpp  MCTree.cpp  MCTreeNode.cpp
mre_dmcts_msgs/: CMakeLists.txt  package.xml
mre_dmcts_msgs/msg/: FrontierClusters.msg  NavigationFailureSignal.msg  RobotConnectivity.msg  RobotMapUpdate.msg
mre_dmcts_msgs/srv/: GetMap.srv  GetStartingArea.srv
mre_dmcts_nodes/: CMakeLists.txt  package.xml
mre_dmcts_nodes/src/: ConnectivityServer.cpp  FrontierClusterServer.cpp  GlobalMapServer.cpp  GroundTruthMapServer.cpp  LoggingServer.cpp  NavigationServer.cpp  NodeServer.cpp  PathfindingServer.cpp  PlannerServer.cpp  RobotMapServer.cpp  RobotMarkerServer.cpp  SensorEmulatorServer.cpp  TransformServer.cpp  nodeMain.cpp
mre_dmcts_sim/: CMakeLists.txt  package.xml
mre_dmcts_sim/config/: sim.yaml
mre_dmcts_sim/launch/: demo.launch  groundStation.launch  (+4 more)
mre_dmcts_tests/: CMakeLists.txt  package.xml
mre_dmcts_tests/include/mre_dmcts_test/: common.hpp
mre_dmcts_tests/launch/: integration.test  node.test
mre_dmcts_tests/test/node/: TestGlobalMapServer.cpp  TestGroundTruthMapServer.cpp  TestNavigationServer.cpp  TestOmplPathfinding.cpp  TestPathfindingServer.cpp  TestPlannerServer.cpp  TestRobotMapServer.cpp  TestSensorEmulatorServer.cpp
mre_dmcts_tests/test/unit/: TestCollisionHandler.cpp  TestDisplacementAction.cpp  TestFiniteLog.cpp  TestFrontierClusterAction.cpp  TestFrontierClustering.cpp  TestGroundTruthMap.cpp  TestMCActionGenerator.cpp  TestMCTree.cpp  TestMCTreeNode.cpp  TestNavigation.cpp  TestOccupancyMap.cpp  TestPathPlanner.cpp  TestPlanner.cpp  TestRobotConnectivity.cpp  TestRobotMap.cpp  TestSensorEmulator.cpp
scripts/: functions.py  multiplot.py  plot.py  pointcloud_to_image.py  run_batch.py  speedup_plot.py  stats.py
(+56 files in other folders)
