<?xml version="1.0"?>
<package format="2">
  <name>dmce</name>
  <version>2.1.7</version>
  <description>
      Multi-Robot Exploration by way of Decentralised Monte Carlo Tree Search.
	  Top-level meta-package.
  </description>

  <maintainer email="">Sean Bone</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>dmce_core</exec_depend>
  <exec_depend>dmce_mcplanner</exec_depend>
  <exec_depend>dmce_msgs</exec_depend>
  <exec_depend>dmce_nodes</exec_depend>
  <exec_depend>dmce_sim</exec_depend>
  <exec_depend>dmce_tests</exec_depend>

  <export>
	  <metapackage />
  </export>
</package>
