<?xml version="1.0"?>
<package format="2">
  <name>dmce_mcplanner</name>
  <version>2.1.7</version>
  <description>
      Multi-Robot Exploration by way of Decentralised Monte Carlo Tree Search.
      MCTS-based planner package.
  </description>
  <maintainer email="">Sean Bone</maintainer>
  <license>GPLv3</license>
  <author email="">Sean Bone</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>

  <depend>dmce_core</depend>
  <depend>dmce_msgs</depend>
</package>
