<?xml version="1.0"?>
<package format="2">
  <name>dmce_msgs</name>
  <version>2.1.4</version>
  <description>
      Multi-Robot Exploration by way of Decentralised Monte Carlo Tree Search.
      Package encapsulating custom message and service declarations.
  </description>
  <maintainer email="">Sean Bone</maintainer>
  <license>GPLv3</license>
  <author email="">Sean Bone</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
</package>
