<?xml version="1.0"?>
<package format="2">
  <name>mre_dmcts_tests</name>
  <version>2.1.4</version>
  <description>
      Multi-Robot Exploration by way of Decentralised Monte Carlo Tree Search.
      Package containing unit, node-level and integration tests.
  </description>
  <maintainer email="bones@ethz.ch">Sean Bone</maintainer>
  <license>GPLv3</license>
  <author email="bones@ethz.ch">Sean Bone</author>

  <test_depend>gtest</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mre_dmcts_core</depend>
  <depend>mre_dmcts_mcplanner</depend>
  <depend>mre_dmcts_sim</depend>
  <depend>mre_dmcts_nodes</depend>
  <depend>mre_dmcts_msgs</depend>
</package>
